tests/NormalTests/paczka1/small_fuzzy/78321313.err
Error in line 4: Z2Mo A687 43,1
Error in line 3: mnl9 A362 11,0
Error in line 6: Z2Mo A362 46,7
Error in line 14: 5b3lKPSwo S910 41,6
